{{$NEXT}}

2.400002  2023-09-07 14:07:36+02:00 Europe/Vienna

  * Fix missing dependencies

2.400001  2023-09-07 12:48:53+02:00 Europe/Vienna

  * Fix author tests.
  * Fix Cisco NX-OS prompt matching
    at least version 9.3(9) sends a carriage-return before the prompt,
    after the reguar carriage-return plus line-feed
  * Change Cisco configure prompt regex to match the other prompt regexes

2.400000 2023-08-25

  * Fix Cisco privileged prompt discovery
    when the last line of a received block ends in #, which makes it look
    like a privileged prompt, but contains spaces
  * Improve performance of ::Wrapper::Net_Telnet
    by reading all blocks of available data instead of only the first one
    per pump call.
    This also reduces the possibility of incorrect prompt matching.
  * Lower CPU utilization
    by sleeping for 10 milliseconds between each pump iteration
  * Improve debug output by wrapping the buffer data in single quotes

2.300005 2023-07-20

  * [#40] Support all lowercase password prompt

2.300004 2023-03-23

  * [#37] Improve phrasebook for HP

2.300003 2019-04-19

  * catch unknown personality errors

2.300002 2017-10-14

  * #25 cisco/hp/pb login failure on hp procurve (A. Zanger)
  * #27 find_prompt doesn't bail out on failure to find a prompt (A. Zanger)
  * new phrasebooks for many platforms (A. Zanger)
  * new phrasebooks for Cisco WLC and fsck IOS command (Jv Ingen)

2.200009 2017-07-25

  * [#22] remove ANSI terminal codes from CLI response

2.200006  2016-09-30

  * [#21] session debug is always output (arcanez)

2.200005  2015-02-18

  * POD typo fixes from Debian

2.200004  2015-02-14

  * Fixes to distribution

2.200003  2015-02-13

  * Fix Serial transport constructing params incompatible with cu (S. Kersley)
  * Fix spelling mistake and POD syntax issues (G. Herrmann)

2.200002  2015-02-22

  * Fix MANIFEST (salva)

2.200001  2015-01-06

  * Add Net::OpenSSH transport (salva)
  * Fix using barewords on filehandles (salva)
